WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106268
HTMLTreeBuilder shouldn't keep a Document pointer
https://bugs.webkit.org/show_bug.cgi?id=106268
Summary
HTMLTreeBuilder shouldn't keep a Document pointer
Adam Barth
Reported
2013-01-07 15:39:48 PST
HTMLTreeBuilder shouldn't keep a Document pointer
Attachments
Patch
(8.30 KB, patch)
2013-01-07 15:42 PST
,
Adam Barth
no flags
Details
Formatted Diff
Diff
Patch for landing
(8.43 KB, patch)
2013-01-07 23:26 PST
,
Adam Barth
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2013-01-07 15:42:32 PST
Created
attachment 181579
[details]
Patch
Eric Seidel (no email)
Comment 2
2013-01-07 15:53:11 PST
Comment on
attachment 181579
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=181579&action=review
> Source/WebCore/html/parser/HTMLTreeBuilder.cpp:326 > + m_isAttached = false;
This appears to be a debug-only flag?
> Source/WebCore/html/parser/HTMLTreeBuilder.cpp:826 > - if (!m_document->inQuirksMode() && m_tree.openElements()->inButtonScope(pTag)) > + if (!m_tree.inQuirksMode() && m_tree.openElements()->inButtonScope(pTag))
I really like this change.
Adam Barth
Comment 3
2013-01-07 16:23:47 PST
(In reply to
comment #2
)
> (From update of
attachment 181579
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=181579&action=review
> > > Source/WebCore/html/parser/HTMLTreeBuilder.cpp:326 > > + m_isAttached = false; > > This appears to be a debug-only flag?
Yes! It is now. I'll mark it as such.
> > Source/WebCore/html/parser/HTMLTreeBuilder.cpp:826 > > - if (!m_document->inQuirksMode() && m_tree.openElements()->inButtonScope(pTag)) > > + if (!m_tree.inQuirksMode() && m_tree.openElements()->inButtonScope(pTag)) > > I really like this change.
Thanks!
Adam Barth
Comment 4
2013-01-07 23:26:38 PST
Created
attachment 181654
[details]
Patch for landing
WebKit Review Bot
Comment 5
2013-01-08 00:24:22 PST
Comment on
attachment 181654
[details]
Patch for landing Clearing flags on attachment: 181654 Committed
r139042
: <
http://trac.webkit.org/changeset/139042
>
WebKit Review Bot
Comment 6
2013-01-08 00:24:26 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug